[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-tools-common"
version = "0.1.1"
description = "Shared authentication, profiles, and output utilities for CLI tools"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_tools_common*"]
